Modificando el estilo de los proyectos

--- a/src/components/education/style_education.module.css
+++ b/src/components/education/style_education.module.css
@@ -32,6 +32,7 @@
   text-align: center;
   margin: 40px 0px 0px 0px;
   font-size: var(--text-h1);
+  color: var(--text-color-on-primary-background);
 }
 
 .squareContainer {
