--- a/src/components/projects/style_projects.module.css
+++ b/src/components/projects/style_projects.module.css
@@ -24,31 +24,77 @@
 
 .container {
   text-align: center;
-  padding: 0px 10%;
+  padding: 0px 5%;
 }
 
-.containerTitle {
-  margin-top: 45px;
-}
 
 .containerTitle h1 {
+  margin-top: 45px;
   font-size: var(--text-h1);
   color: var(--text-color-on-primary-background);
 }
 
- .containerImg {
-  margin: 5% 0px;
+
+.containerItem {
+  margin: 10px 0px 20% 0px;
+  padding: 0px 0px 10px 0px;
+  border-radius: 38% 38% 5px 5px;
+  overflow-x: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+  transition: box-shadow 0.3s ease-in-out;
 }
 
+.containerItem:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.9);
+}
+
+.containerItem:hover .containerImg img {
+  transform: scale(1.03);
+  -webkit-transform: scale(1.03);
+  -moz-transform: scale(1.03);
+  -ms-transform: scale(1.03);
+  -o-transform: scale(1.03);
+}
+
+
 .containerImg img {
-  border-radius: 5px;
   width: 100%;
   height: 100%;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4);
-  cursor: pointer;
-  transition: transform 0.5s;
+  transition: transform .7s;
+  -webkit-transition: transform .7s;
+  -moz-transition: transform .7s;
+  -ms-transition: transform .7s;
+  -o-transition: transform .7s;
 }
 
+.titleProject {
+  font-size: var(--text-h2);
+  color: var(--text-color-on-primary-background);
+}
+
+.text {
+  padding: 0px 8%;
+  color: var(--text-color-on-primary-background);
+}
+
+.projectButton {
+  margin: 0 10px;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  background-color: var(--secondary-background-color);
+  cursor: pointer;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.projectButton:hover {
+  background-color: #1c1c1c;
+  color: #fff;
+}
 
 /*-----------------------------------*/
 /* Media screen Desktop*/
@@ -56,18 +102,21 @@
   .containerProjects {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-gap: 40px;
-    width: 80%;
+    grid-gap: 45px;
+    width: 77%;
     margin: 0 auto;
     margin-top: 10px;
+  }
+
+  .containerItem {
+    margin: 15px 0px 4% 0px;
   }
 
   .containerImg {
     width: 100%;
   }
 
-  .containerImg img:hover {
-    transform: translateY(-7px);
-  }
+  
+
 }
 
