--- a/src/components/skills/style_skills.module.css
+++ b/src/components/skills/style_skills.module.css
@@ -84,7 +84,11 @@
 }
 
 .icon:hover {
-  transform: scale(1.2);
+  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
 }
 
 /*-----------------------------------*/
