--- a/src/components/about_me/style_about_me.module.css
+++ b/src/components/about_me/style_about_me.module.css
@@ -23,6 +23,7 @@
 /* Media screen mobile */
 
 .containerAboutMe {
+  scroll-behavior: smooth;
   margin-top: 175px;
   display: flex;
   flex-direction: column;
