--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4,8 +4,11 @@
   --main-background-color : #f2f2f2;
 }
 
-body {
+* {
   scroll-behavior: smooth;
+}
+
+body {
   margin: 0px;
   font-family: 'Playpen Sans', cursive;
   box-sizing: border-box;
