--- a/src/components/education/style_education.module.css
+++ b/src/components/education/style_education.module.css
@@ -22,6 +22,7 @@
 /*-----------------------------------*/
 /* Media screen mobile */
 .containerEducation {
+  scroll-behavior: smooth;
   display: flex;
   flex-direction: column;
   align-items: center;
