--- a/src/components/navbar/style_navbar.module.css
+++ b/src/components/navbar/style_navbar.module.css
@@ -1,133 +1,134 @@
-@import url("https://fonts.googleapis.com/css2?family=Kalam:wght@700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@700&display=swap');
 
 :root {
-  /* font size */
-  --text-h1: 30px;
-  --text-h2: 23px;
-  --text-p: 17px;
+    /* font size */
+    --text-h1: 30px;
+    --text-h2: 23px;
+    --text-p: 17px;
 
-  /* Color of letters*/
-  --text-color-on-primary-background: #333333;
-  --text-color-on-secondary-background: #ffffff;
+    /* Color of letters*/
+    --text-color-on-primary-background: rgb(20, 28, 58);
+    --text-color-on-secondary-background: #ffffff;
 
-  /* font family titles */
-  --font-family-title: "Kalam", cursive;
+    /* font family titles */
+    --font-family-title: 'Kalam', cursive;
 
-  /* backgrounds */
-  --main-background-color: #f2f2f2;
-  --secondary-background-color: #333333;
-  --tertiary-background-color: #3498db;
+    /* backgrounds */
+    --main-background-color: #f2f2f2;
+    --secondary-background-color: #333333;
+    --tertiary-background-color: #3498db;
 }
 
 /*-----------------------------------*/
 /* Media screen mobile */
 
 .containerNavbarDesktop {
-  display: none;
+    display: none;
 }
 
 .containerNavbarMobile {
-  display: initial;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  z-index : 1;
-  background: var(--main-background-color);
-  opacity: 0.8;
-  box-shadow: 0px -2px 20px rgba(0, 0, 0, 0.3);
-  z-index: 1;
+    display: initial;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 1;
+    background: var(--main-background-color);
+    opacity: 0.8;
+    box-shadow: 0px -2px 20px rgba(0, 0, 0, 0.3);
+    z-index: 1;
 }
 
 .containerIcons {
-  display: flex;
-  justify-content: space-between;
-  padding: 6% 6% 1px 6%;
+    display: flex;
+    justify-content: space-between;
+    padding: 6% 6% 1px 6%;
 }
 
 .iconClose {
-  font-size: 34px;
-  cursor: pointer;
+    font-size: 34px;
+    cursor: pointer;
 }
 
 .iconMain {
-  font-size: 37px;
+    font-size: 37px;
+    color: rgb(110, 7, 243);
 }
 
 .containerFixed {
-  display: none; /*flex*/
-  justify-content: center;
-  position: fixed;
-  top: 95px;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.2);
+    display: none; /*flex*/
+    justify-content: center;
+    position: fixed;
+    top: 95px;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.2);
 }
 
 .containerLinks {
-  display: flex;
-  flex-direction: column;
-  width: 80%;
-  max-width: 500px;
-  height: 250px;
-  padding: 10px 0px;
-  text-align: center;
-  background-color: var(--secondary-background-color);
-  border-radius: 7px;
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    max-width: 500px;
+    height: 250px;
+    padding: 10px 0px;
+    text-align: center;
+    background-color: var(--secondary-background-color);
+    border-radius: 7px;
 }
 
 .links {
-  text-decoration: none;
-  color: var(--text-color-on-secondary-background);
-  padding: 20px;
+    text-decoration: none;
+    color: var(--text-color-on-secondary-background);
+    padding: 20px;
 }
 
 .links:active {
-  background-color: #4d4e4f;
+    background-color: #4d4e4f;
 }
 
 /*-----------------------------------*/
 /* Media screen Desktop*/
 @media screen and (min-width: 750px) {
-  .containerNavbarMobile {
-    display: none;
-  }
+    .containerNavbarMobile {
+        display: none;
+    }
 
-  .containerNavbarDesktop {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 35px 50px 0px 50px;
-  }
+    .containerNavbarDesktop {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 35px 50px 0px 50px;
+    }
 
-  .iconMain {
-    font-size: 50px;
-  }
+    .iconMain {
+        font-size: 50px;
+    }
 
-  .containerLinks {
-    width: initial;
-    max-width: initial;
-    height: initial;
-    padding: initial;
-    text-align: center;
-    background: initial;
-    flex-direction: row;
-  }
+    .containerLinks {
+        width: initial;
+        max-width: initial;
+        height: initial;
+        padding: initial;
+        text-align: center;
+        background: initial;
+        flex-direction: row;
+    }
 
-  .links {
-    padding: initial;
-    color: var(--text-color-on-primary-background);
-    font-size: 17px;
-    margin: 0px 10px;
-    border-bottom: 3px solid transparent;
-    transition: border-bottom 0.3s ease;
-  }
+    .links {
+        padding: initial;
+        color: rgb(20, 28, 58);
+        font-size: 17px;
+        margin: 0px 10px;
+        border-bottom: 3px solid transparent;
+        transition: border-bottom 0.5s ease;
+    }
 
-  .links:hover {
-    color: black;
-    border-bottom: 3px solid var(--text-color-on-primary-background);
-  }
+    .links:hover {
+        color: black;
+        border-bottom: 3px solid rgb(110, 7, 243);
+    }
 
-  .links:active {
-    background: initial;
-  }
+    .links:active {
+        background: initial;
+    }
 }
