--- a/src/components/skills/style_skills.module.css
+++ b/src/components/skills/style_skills.module.css
@@ -25,7 +25,6 @@
 .containerOfMyPresentation {
     background: rgb(110, 7, 243);
     padding: 14% 8%;
-    margin: 0 auto;
 }
 
 .title {
@@ -91,41 +90,17 @@
 /*-----------------------------------*/
 /* Media screen Desktop*/
 @media screen and (min-width: 900px) {
-    .containerSkills {
+    .containerOfMyPresentation {
         display: flex;
-        align-items: center;
-        padding: 6% 0px 6% 0px;
+        justify-content: center;
+        flex-direction: column;
+        background: rgb(110, 7, 243);
+        padding: 8% 11%;
     }
 
     .text {
-        width: 25%;
         font-size: var(--text-p);
         padding: 0px 80px;
-    }
-
-    .containerIcons {
-        width: 100%;
-    }
-
-    .frontendParentContainer {
-        display: flex;
-    }
-
-    .containerIconsFrontend h1 {
-        text-align: center;
-    }
-
-    .backendParentContainer {
-        display: flex;
-        justify-content: end;
-    }
-
-    .containerIconsBackend {
-        margin-right: 40px;
-    }
-
-    .containerIconsBackend h1 {
-        text-align: center;
     }
 
     .icon {
