--- a/src/components/portfolio-components/navbar/style_navbar.module.css
+++ b/src/components/portfolio-components/navbar/style_navbar.module.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@700&display=swap');
-
 :root {
     /* font size */
     --text-h1: 30px;
@@ -19,14 +17,12 @@
     --tertiary-background-color: #3498db;
 }
 
-/*-----------------------------------*/
 /* Media screen mobile */
-
-.containerNavbarDesktop {
+.desktopNavbar {
     display: none;
 }
 
-.containerNavbarMobile {
+.mobileNavbar {
     display: initial;
     position: fixed;
     width: 100%;
@@ -37,36 +33,16 @@
     box-shadow: 0px -2px 20px rgba(0, 0, 0, 0.3);
 }
 
-.containerIcons {
+.navIconToggle {
     display: flex;
     justify-content: space-between;
-    padding: 6% 6% 1px 6%;
+    padding: 30px 25px 15px 25px;
 }
 
-.iconClose {
-    font-size: 34px;
-    cursor: pointer;
-}
-
-.iconMain {
-    font-size: 40px;
-    color: rgb(110, 7, 243);
-}
-
-.containerFixed {
-    display: none; /*flex*/
-    justify-content: center;
-    position: fixed;
-    top: 83px;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.2);
-}
-
-.containerLinks {
+.subMenu {
     display: flex;
     flex-direction: column;
-    width: 80%;
+    width: 290px;
     max-width: 500px;
     height: 250px;
     padding: 10px 0px;
@@ -75,59 +51,55 @@
     border-radius: 7px;
 }
 
-.links {
+.subMenuLinks {
     text-decoration: none;
     color: var(--text-color-on-secondary-background);
     padding: 20px;
+    transition: background 0.2s;
 }
 
-.links:active {
+.subMenuLinks:hover {
+    background: rgb(87, 87, 87);
+}
+
+.subMenuLinks:active {
     background-color: #4d4e4f;
 }
 
 /*-----------------------------------*/
 /* Media screen Desktop*/
 @media screen and (min-width: 750px) {
-    .containerNavbarMobile {
+    .mobileNavbar {
         display: none;
     }
 
-    .containerNavbarDesktop {
+    .desktopNavbar {
         display: flex;
         justify-content: space-between;
         align-items: center;
         padding: 35px 50px 0px 50px;
     }
 
-    .iconMain {
-        font-size: 50px;
+    .desktopNavItems {
+        display: flex;
     }
 
-    .containerLinks {
-        width: initial;
-        max-width: initial;
-        height: initial;
-        padding: initial;
-        text-align: center;
-        background: initial;
-        flex-direction: row;
-    }
-
-    .links {
+    .desktopNavItemsLinks {
         padding: initial;
         color: rgb(20, 28, 58);
         font-size: 17px;
         margin: 0px 10px;
+        text-decoration: none;
         border-bottom: 3px solid transparent;
         transition: border-bottom 0.5s ease;
     }
 
-    .links:hover {
+    .desktopNavItemsLinks:hover {
         color: black;
         border-bottom: 3px solid rgb(110, 7, 243);
     }
 
-    .links:active {
+    .desktopNavItemsLinks:active {
         background: initial;
     }
 }
