--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,35 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
+
+@layer base {
+    html {
+        font-family: 'Poppins', sans-serif;
+    }
+}
 
 body {
     margin: 0px;
-    color: rgb(20, 28, 58);
-    font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
-    overflow-x: hidden;
     scroll-behavior: smooth;
+}
+
+/* Modal animation */
+@keyframes anvil {
+    0% {
+        transform: scale(1) translateY(0px);
+        opacity: 0;
+        box-shadow: 0 0 0 rgba(241, 241, 241, 0);
+    }
+    1% {
+        transform: scale(0.96) translateY(10px);
+        opacity: 0;
+        box-shadow: 0 0 0 rgba(241, 241, 241, 0);
+    }
+    100% {
+        transform: scale(1) translateY(0px);
+        opacity: 1;
+        box-shadow: 0 0 500px rgba(241, 241, 241, 0);
+    }
+}
+.popup-content {
+    -webkit-animation: anvil 0.3s cubic-bezier(0.38, 0.1, 0.36, 0.9) forwards;
 }
